--- a/app/app/views/teachers/new.html.erb
+++ b/app/app/views/teachers/new.html.erb
@@ -1,8 +1,8 @@
-<h1>Inscription</h1>
+<h1>Nouveau professeur</h1>
 
 <%= form_for(@teacher) do |f| %>
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :nom %><br />
     <%= f.text_field :name %>
   </div>
 <% end %>
