Added login protection to pages, i.e all URL request redirects to login page as long as no user has logged in.

--- a/speech-habits-client/www/partials/room.html
+++ b/speech-habits-client/www/partials/room.html
@@ -10,5 +10,5 @@
 	</tr>
 </table>
 <div >
-  <a class="btn btn-default" href="#/teachers_list">Leave room</a>
+  <a class="btn btn-default" href="#/teachersList">Leave room</a>
 </div>
