--- a/speech-habits-client/www/partials/teachers_list.html
+++ b/speech-habits-client/www/partials/teachers_list.html
@@ -2,9 +2,15 @@
 
 <div class="container center-block">
 
-	<h1>Choose a teacher!</h1>
+    <h1>Choose a teacher!</h1>
 
-	<div ng-repeat="teacher in teachersList">
-		<a  href="#/rooms/{{teacher.id}}"> {{teacher.name}} </a>
-	</div>
+    <div ng-repeat="teacher in teachersList">
+        <a href="#/rooms/{{teacher.id}}"> {{teacher.name}} </a>
+    </div>
+
+    <a class="btn btn-default" href="#/login">Back to Welcome page</a>
+</div>
+
+<div class="text-center text-info">
+    You are logged in as {{pseudo}}
 </div>
