--- a/app/app/views/shared/_expression_form.html.erb
+++ b/app/app/views/shared/_expression_form.html.erb
@@ -1,8 +1,12 @@
 <%= form_for @expression do |f| %>
+<%= @teacher.id %>
+
+  <%= f.hidden_field :teacher_id, :value => @teacher.id %>
+ 
   <div class="field">
     <%= f.text_area :content %>
   </div>
   <div class="actions">
-    <%= f.submit "Soumettre" %>
+    <%= f.submit "Soumettre" %> 
   </div>
 <% end %>
