--- a/app/app/views/teachers/show.html.erb
+++ b/app/app/views/teachers/show.html.erb
@@ -3,12 +3,12 @@
     <td class="main">
 	<h1><%= @teacher.name  %></h1>
 	<h3 class="expression">Nouvelle expression</h1>
-	  <%= render 'shared/expression_form' %>
-      <% unless @teacher.expressions.empty? %>
-        <table class="expressions" summary="expressions du professeur">
-          <%= render @expressions %>
-        </table>
-      <% end %>
+	  <%= render 'shared/expression_form', :teacher_id => @teacher.id %>
+	  <% unless @teacher.expressions.empty? %>
+      	<table class="expressions" summary="expressions du prof">
+		  <%= render @expressions %>
+	  	</table>
+	  <% end %>
     </td>
   </tr>
 </table>
