--- a/app/app/views/expressions/_expression.html.erb
+++ b/app/app/views/expressions/_expression.html.erb
@@ -1,5 +1,11 @@
 <tr>
-  <td class="expression">
+  <th class="expression">
     <span class="content"><%= expression.content %></span>
+  </th>
+  <td>
+	<input type="submit" name = <%= expression.id %> value="+1" id= <%= expression.id %> >
+  </td>
+  <td>
+	<input type="text" size="10" name="score_<%= expression.id %>" id="score_<%= expression.id %>" value = <%= Event.count :conditions => { :expression_id => expression.id } %> style="background-color:#F0FFFF" onFocus="javascript: this.blur()">
   </td>
 </tr>
