--- a/app/app/views/pages/home.html.erb
+++ b/app/app/views/pages/home.html.erb
@@ -1,5 +1,14 @@
+<% if signed_in? %>
+<p>
+	Bienvenue <%= @current_user.name %> ! 
+</p>
+<p>
+	Choisissez un prof <%= link_to "ici", teachers_path%> !
+</p>
+<% else %>
 <p>
   C'est la page d'accueil de l'application Speech Habits
 </p>
 
 <%= link_to "S'inscrire !", signup_path, :class => "signup_button round" %>
+<% end %>
