--- a/app/app/views/teachers/new.html.erb
+++ b/app/app/views/teachers/new.html.erb
@@ -5,4 +5,7 @@
     <%= f.label :nom %><br />
     <%= f.text_field :name %>
   </div>
+  <div class="actions">
+    <%= f.submit "Soumettre" %> 
+  </div>
 <% end %>
