--- a/app/app/views/teachers/index.html.erb
+++ b/app/app/views/teachers/index.html.erb
@@ -4,6 +4,10 @@
   <% @teachers.each do |teacher| %>
     <li>
       <%= link_to teacher.name, teacher %>
+	  <% if current_user.admin? %>
+	  	| <%= link_to "supprimer", teacher, :method => :delete, :confirm => "Etes-vous certain ?",
+                                :title => "Supprimer #{teacher.name}" %>
+	  <% end %>
     </li>
   <% end %>
 </ul>
