--- a/app/app/views/users/index.html.erb
+++ b/app/app/views/users/index.html.erb
@@ -4,6 +4,10 @@
   <% @users.each do |user| %>
     <li>
       <%= link_to user.name, user %>
+	  <% if current_user.admin? %>
+	  	| <%= link_to "supprimer", user, :method => :delete, :confirm => "Etes-vous certain ?",
+                                :title => "Supprimer #{user.name}" %>
+	  <% end %>
     </li>
   <% end %>
 </ul>
