--- a/app/app/views/users/show.html.erb
+++ b/app/app/views/users/show.html.erb
@@ -3,7 +3,12 @@
 </h1>
 
 <p>
-	Vous avez repéré <%= Event.count :conditions => { :user_id => @user.id } %> expressions
+	<% if current_user == @user%> 
+		Vous avez 
+	<% else %> 
+		<%= @user.name %> a 
+	<%end%> 
+	repéré <%= Event.count :conditions => { :user_id => @user.id } %> expressions
 </p>
 
 <p> 
