--- a/app/app/views/shared/_expression_form.html.erb
+++ b/app/app/views/shared/_expression_form.html.erb
@@ -3,7 +3,7 @@
   <%= f.hidden_field :teacher_id, :value => @teacher.id %>
  
   <div class="field">
-    <%= f.text_area :content, :cols => "40", :rows => "2"%>
+    <%= f.text_field :content%>
   </div>
   <div class="actions">
     <%= f.submit "Soumettre" %> 
