--- a/app/app/views/teachers/index.html.erb
+++ b/app/app/views/teachers/index.html.erb
@@ -12,4 +12,4 @@
   <% end %>
 </ul>
 
-<%= link_to "Nouveau Professeur", "/teachers/new" %>
+<%= button_to "Nouveau Professeur", "/teachers/new", :class => "btn btn-success" %>
