--- a/app/app/views/layouts/_header.html.erb
+++ b/app/app/views/layouts/_header.html.erb
@@ -1,19 +1,13 @@
 <header>
-  <%= link_to logo, root_path %>
-  <nav class="round">
-    <ul>
+    <ul class="nav nav-tabs">
       <li><%= link_to "Accueil", root_path %></li>
       <% if signed_in? %>
 	  <li><%= link_to "Profs", teachers_path %></li>
-      <li><%= link_to "Utilisateurs", users_path %></li>
+      <li><%= link_to "Leaderboard", leaderboard_path %></li>
       <li><%= link_to "Profil", current_user %></li>
-      <% end %>
-      <li><%= link_to "Aide", help_path %></li>
-      <% if signed_in? %>
-      <li><%= link_to "Déconnexion", signout_path, :method => :delete %></li>
+      
       <% else %>
       <li><%= link_to "S'identifier", signin_path %></li>
       <% end %>
     </ul>
-  </nav>
 </header>
