--- a/app/app/views/layouts/_stylesheets.html.erb
+++ b/app/app/views/layouts/_stylesheets.html.erb
@@ -1,3 +1,2 @@
-<%= stylesheet_link_tag 'blueprint/screen', :media => 'screen' %>
-<%= stylesheet_link_tag 'blueprint/print',  :media => 'print' %>
-<%= stylesheet_link_tag 'custom', :media => 'screen' %>
+<%= stylesheet_link_tag 'bootstrap.min', :media => 'screen' %>
+<%= stylesheet_link_tag 'bootstrap-theme.min', :media => 'screen' %>
