--- a/app/app/views/users/new.html.erb
+++ b/app/app/views/users/new.html.erb
@@ -6,6 +6,6 @@
     <%= f.text_field :name %>
   </div>
   <div class="actions">
-    <%= f.submit "Soumettre" %> 
+    <%= f.submit "Soumettre", :class => "btn btn-default" %> 
   </div>
 <% end %>
